[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/godot-xr-tools/functions/function_handtracking.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-openxr/config/OpenXRPose.gdns" type="Script" id=2]
[ext_resource path="res://addons/godot-openxr/config/OpenXRSkeleton.gdns" type="Script" id=3]

[node name="FunctionHandtracking" type="Spatial"]
script = ExtResource( 1 )

[node name="LeftHandSkelPose" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="LeftHandBlankSkeleton" type="Skeleton" parent="LeftHandSkelPose"]
script = ExtResource( 3 )

[node name="RightHandSkelPose" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="RightHandBlankSkeleton" type="Skeleton" parent="RightHandSkelPose"]
script = ExtResource( 3 )
